<resources>
    <string name="app_name">C196</string>
    <string name="cancel">Cancel</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="term_end">Term End</string>
    <string name="courses">Courses</string>
    <string name="english">English</string>
    <string name="term_start">Term Start</string>
    <string name="term_name">Term Name</string>
    <string name="term_id">Term ID</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="notify_start">Notify Start</string>
    <string name="notify_end">Notify End</string>
    <string name="delete_term">Delete term</string>
    <string name="delete_course">Delete course</string>
    <string name="course_id">Course ID</string>
    <string name="course_title">Course Title</string>
    <string name="term_x">Term X</string>
    <string name="course_start">Course Start</string>
    <string name="course_end">Course End</string>
    <string name="assessments">Assessments</string>
    <string name="status">Status</string>
    <string name="rusty_shackleford">Rusty Shackleford</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_phone">Instructor Phone</string>
    <string name="_555_555_5555">555–555–5555</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="notes">Notes:</string>
    <string name="this_course_is_hard">This course is hard</string>
    <string name="channel_name">C196</string>
    <string name="channel_description">Scheduling App Channel</string>
    <string name="plus_sign">plus sign</string>
    <string name="term_view">Term view</string>
    <string name="no_courses"><![CDATA[<No courses created>]]></string>
    <string name="no_terms"><![CDATA[<No terms created>]]></string>
    <string name="assessment_title">Assessment Title</string>
    <string name="english_test">English Test</string>
    <string name="due_date">Due Date</string>
    <string name="completed">Completed</string>
    <string name="passed">Passed</string>
    <string name="course">Course</string>
    <string name="term">Term</string>
    <string name="no_assessments"><![CDATA[<No assessments created>]]></string>
    <string name="notify_due_date">Notify due date</string>
    <string name="share">Share</string>
    <string name="no_course_title">No course title!</string>
    <string name="no_course_end">No course end date!</string>
    <string name="delete_assessment">Delete assessment</string>
    <string name="course_tracker">Course Tracker</string>
    <string name="by_brandon_egbert">by Brandon Egbert</string>
</resources>