<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/termDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="409dp"
            android:layout_height="729dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_id" />

                    <EditText
                        android:id="@+id/courseIdEdit"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:autofillHints="id"
                        android:inputType="none" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_title" />

                    <EditText
                        android:id="@+id/courseTitleEdit"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:autofillHints="title"
                        android:hint="@string/english"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="clip_vertical"
                        android:text="@string/course_start"
                        android:textAlignment="inherit" />

                    <DatePicker
                        android:id="@+id/courseStartDate"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_end"
                        android:textAlignment="center" />

                    <DatePicker
                        android:id="@+id/courseEndDate"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textAlignment="center" />

                    <Spinner
                        android:id="@+id/courseStatusDropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_name" />

                    <EditText
                        android:id="@+id/courseInstructorNameEdit"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:autofillHints="instructor name"
                        android:hint="@string/rusty_shackleford"
                        android:inputType="text" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_phone" />

                    <EditText
                        android:id="@+id/courseInstructorPhoneEdit"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:autofillHints="instructor phone"
                        android:hint="@string/_555_555_5555"
                        android:inputType="phone" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_email" />

                    <EditText
                        android:id="@+id/courseInstructorEmailEdit"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:autofillHints="instructor phone"
                        android:hint="@string/_555_555_5555"
                        android:inputType="textEmailAddress" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />

                    <EditText
                        android:id="@+id/courseNotesEdit"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:autofillHints="instructor phone"
                        android:hint="@string/this_course_is_hard"
                        android:inputType="text" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assessments" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/courseDetailCourseRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/termSaveButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/termCancelButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>