<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/courseDetailScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_title" />

                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />

                    <EditText
                        android:id="@+id/courseTitleEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:autofillHints="title"
                        android:hint="@string/english"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_start" />
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />
                    <EditText
                        android:id="@+id/courseStartEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:autofillHints="start date"
                        android:inputType="none"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/course_end"
                        android:textAlignment="center" />
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />
                    <EditText
                        android:id="@+id/courseEndEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:autofillHints="date"
                        android:inputType="none" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term"/>
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="50dp" />
                    <Spinner
                        android:id="@+id/courseStatusDropdown"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_weight="1"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_name" />
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />
                    <EditText
                        android:id="@+id/courseInstructorNameEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:autofillHints="instructor name"
                        android:hint="@string/rusty_shackleford"
                        android:layout_weight="1"
                        android:inputType="text" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_phone" />
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />
                    <EditText
                        android:id="@+id/courseInstructorPhoneEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:autofillHints="instructor phone"
                        android:hint="@string/_555_555_5555"
                        android:layout_weight="1"
                        android:inputType="phone" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructor_email" />
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />
                    <EditText
                        android:id="@+id/courseInstructorEmailEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:autofillHints="instructor phone"
                        android:hint="@string/_555_555_5555"
                        android:inputType="textEmailAddress" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"/>
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="50dp" />
                    <Spinner
                        android:id="@+id/courseTermDropdown"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:layout_weight="1"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />
                    <Space
                        android:layout_width="75pt"
                        android:layout_height="match_parent" />
                    <EditText
                        android:id="@+id/courseNotesEdit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:autofillHints="instructor phone"
                        android:hint="@string/this_course_is_hard"
                        android:inputType="text" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assessments" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/assessmentRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/courseSaveButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/courseCancelButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel" />

                </LinearLayout>
            </LinearLayout>





        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>